# Flowspire

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.fr.md  README.md  buildspec.json  config.example.jsonc  design-tokens.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
cmake/windows/resources/: installer-Windows.iss
data/locale/: en-US.ini  fr-FR.ini
docs/: guide.fr.md  guide.md
poc/: README.md  detector.py  requirements.txt  test_detector.py  whos_speaking.py
scripts/: build-plugin.bat  bump-version.py  dev-build.bat  install-local.bat  qt_symbol_check.py
src/: plugin-main.cpp
src/core/: audio_util.hpp  config.cpp  config.hpp  director.cpp  director.hpp  profiles.cpp  profiles.hpp  rhythm_style.cpp  rhythm_style.hpp  speaker_detector.cpp  speaker_detector.hpp  threshold_calibration.hpp  version.cpp  version.hpp  weighted_pick.hpp
src/obs/: audio_level_monitor.cpp  audio_level_monitor.hpp  config_loader.cpp  config_loader.hpp  file_store.hpp  fs_atomic.cpp  fs_atomic.hpp  obs_file_store.cpp  obs_file_store.hpp  obs_inventory.cpp  obs_inventory.hpp  profiles_store.cpp  profiles_store.hpp  profiles_store_obs.cpp  scene_switcher.cpp  scene_switcher.hpp  style_store.cpp  style_store.hpp  style_store_obs.cpp
src/ui/: sd_assistant.cpp  sd_assistant.hpp  sd_config_panels.cpp  sd_config_panels.hpp  sd_dock.cpp  sd_dock.hpp  sd_i18n.hpp  sd_icons.cpp  sd_icons.hpp  sd_level_meter.cpp  sd_level_meter.hpp  sd_logo_data.hpp  sd_prefs.cpp  sd_prefs.hpp  sd_profiles_panel.cpp  sd_profiles_panel.hpp  sd_runtime.hpp  sd_settings.cpp  sd_settings.hpp  sd_status_push.cpp  sd_status_push.hpp  sd_style.hpp  sd_support.cpp  sd_support.hpp  sd_theme.hpp  sd_update_check.cpp  sd_update_check.hpp  sd_widgets.hpp
tests/: CMakeLists.txt  fake_file_store.hpp  test_core.cpp  test_profiles_store.cpp
